k8s/simple-torch-inference-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-torch-inference
  labels:
    app: simple-torch-inference
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-torch-inference
  template:
    metadata:
      labels:
        app: simple-torch-inference
    spec:
      containers:
      - name: simple-torch-inference
        image: tripabhi/serveml:0.0.1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 200m
            memory: 300Mi
          limits:
            memory: 400Mi
