k8s/simple-torch-inference-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-torch-inference
spec:
  selector:
    app: simple-torch-inference
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
